Fixed missing colored header on home

--- a/front/src/style/pages/_home.scss
+++ b/front/src/style/pages/_home.scss
@@ -1,5 +1,5 @@
 
-.page_home {
+.page-home {
   .ui.list .list.icon {
     padding: 0;
   }
